2008-03-24	Guido Diepen	<guido@guidodiepen.nl>
	
	* Added splashscreen
	* Added error handling when creating partnerships. Sometimes sync-engine
	tries to rebind certain dtpt ports after creating new pship
	* Added ActiveSync status information to the mainscreen. When an
	activesync is active, the screen will show (almost) the same information
	as the screen on the device
	* Updated the placements of the different screens. Now they are all placed
	centrally over the mainwindow
	* Fixed typo in partnership creation screen
	* Start listening to the PartnershipsChanged signal emitted by sync-engine
	* Made items in partnership-creation window non-editable

2008-03-23	Guido Diepen	<guido@guidodiepen.nl>
	
	* Now also progress of the sync process is shown with progressbar
	* Small code fixes

2008-03-23	Guido Diepen	<guido@guidodiepen.nl>

	* Major rewrite into two separate components, one GUI component and one
	  dataserver component. These both run in their own separate proces,
	  meaning we don't have any problems with the threading within python
	  anymore.
	* Added support for listening to Status events generated when ActiveSync
	  process is going on. Currently it only shows an animated icon when
	  sync to sync-engine is in progress (NB does not have to be sync with
	  opensync!)
	* Added support for only starting the application once
	* Added support for starting the application in system-tray
	* Added support for starting the dataserver only (useful for later with
   	  d-busactivation)

2008-01-28	Guido Diepen	<guido@guidodiepen.nl>

	* Minor update in setup.py for correct handling of icons with packaging.

2008-01-23	Guido Diepen	<guido@guidodiepen.nl>

	* Working setup.py, no more problems with icons

2008-01-22	Guido Diepen	<guido@guidodiepen.nl>

	* Converted the directory structure for easy packaging
	* Created setup.py for distutils

2008-01-20	Guido Diepen	<guido@guidodiepen.nl>

	* Rewrote code to make use of locking for access to librapi2